<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.vcell</groupId>
	<artifactId>vcell-pom</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Virtual Cell Project</name>
	<description>The Virtual Cell client and server</description>
	<url>http://vcell.org/</url>
	<inceptionYear>1997</inceptionYear>
	<organization>
		<name>VCell</name>
		<url>http://vcell.org</url>
	</organization>
	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>jcschaff</id>
			<name>Jim Schaff</name>
			<roles>
				<role>founder</role>
				<role>lead</role>
				<role>developer</role>
				<role>debugger</role>
				<role>reviewer</role>
				<role>support</role>
				<role>maintainer</role>
			</roles>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>John Wagner</name>
		</contributor>
	</contributors>

	<mailingLists>
		<mailingList>
			<name>VCell Open Discussion Forum</name>
			<subscribe>https://groups.google.com/group/vcell-discuss</subscribe>
			<unsubscribe>https://groups.google.com/group/vcell-discuss</unsubscribe>
			<post>vcell-discuss@googlegroups.com</post>
			<archive>https://groups.google.com/group/vcell-discuss</archive>
		</mailingList>
	</mailingLists>

	<modules>
		<module>vcell-admin</module>
		<module>vcell-api-types</module>
		<module>vcell-api</module>
		<module>vcell-apiclient</module>
		<module>vcell-client</module>
		<module>vcell-core</module>
		<module>vcell-math</module>
		<module>vcell-server</module>
		<module>vcell-util</module>
		<module>vcell-vmicro</module>
		<module>vcell-cli</module>
		<module>vcell-rest</module>
        <module>vcell-restclient</module>
    </modules>

	<scm>
		<connection>scm:git:https://github.com/virtualcell/vcell</connection>
		<developerConnection>scm:git:git@github.com:virtualcell/vcell</developerConnection>
		<tag>HEAD</tag>
		<url>https://github.com/virtualcell/vcell</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/virtualcell/vcell/issues</url>
	</issueManagement>
	<ciManagement>
		<system>GitHub Actions</system>
		<url>https://github.com/virtualcell/vcell/actions</url>
	</ciManagement>

	<properties>
		<license.licenseName>MIT</license.licenseName>
		<license.copyrightOwners>UConn Health</license.copyrightOwners>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!-- NB: Disable javadoc doclint -->
		<doclint>none</doclint>

		<activemq-broker.version>5.18.3</activemq-broker.version>
		<activemq-client.version>5.18.3</activemq-client.version>
		<axis.version>1.4</axis.version>
		<bio-formats.version>6.1.1</bio-formats.version>
		<biojava.version>6.0.4</biojava.version>
		<colt.version>1.2.0</colt.version>
		<combine-archive.version>1.4.1</combine-archive.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-codec.version>1.11</commons-codec.version>
		<commons-compress.version>1.21</commons-compress.version>
		<commons-configuration2.version>2.9.0</commons-configuration2.version>
		<commons-csv.version>1.10.0</commons-csv.version>
		<commons-discovery.version>0.5</commons-discovery.version>
		<commons-io.version>2.7</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<commons-lang3.version>3.13.0</commons-lang3.version>
		<commons-math3.version>3.6.1</commons-math3.version>
		<commons-pool2.version>2.5.0</commons-pool2.version>
		<commons-text.version>1.11.0</commons-text.version>
		<gson.version>2.9.1</gson.version>
		<guava.version>33.0.0-jre</guava.version>
		<guice.version>7.0.0</guice.version>
		<httpclient.version>4.5.11</httpclient.version>
		<httpcore.version>4.4.13</httpcore.version>
		<itext.version>2.1.7</itext.version>
		<quarkus-itext.version>3.0.5</quarkus-itext.version>
		<quarkus-logging-json.version>3.1.0</quarkus-logging-json.version>
		<jackson-annotations.version>2.15.2</jackson-annotations.version>
		<jackson-core.version>2.15.2</jackson-core.version>
		<jackson-databind.version>2.15.2</jackson-databind.version>
		<jackson-dataformat-yaml.version>2.15.2</jackson-dataformat-yaml.version>
		<jackson-datatype.version>2.15.2</jackson-datatype.version>
		<jakarta-annotation.version>1.3.5</jakarta-annotation.version>
		<jama.version>1.0.3</jama.version>
		<jaxb-api.version>2.3.0</jaxb-api.version>
		<jaxb-core.version>2.3.0</jaxb-core.version>
		<jaxb-impl.version>2.3.0</jaxb-impl.version>
		<jaxrpc-api.version>1.1</jaxrpc-api.version>
		<jaxen.version>1.2.0</jaxen.version>
		<jdom.version>1.1.3</jdom.version>
		<jdom-contrib.version>1.1.3</jdom-contrib.version>
		<jetty.version>9.4.29.v20200521</jetty.version>
		<jfreechart.version>1.5.0</jfreechart.version>
		<jgrapht.version>1.3.0</jgrapht.version>
		<jhdf.version>0.8.4</jhdf.version>
		<jhdf5.cisd.version>19.04.1</jhdf5.cisd.version> <!-- deprecated -->
		<jhdf5-2-10.version>2.9</jhdf5-2-10.version>
		<jmatio.version>1.0</jmatio.version>
		<joda-time.version>2.12.2</joda-time.version>
		<jai-core.version>1.1.3</jai-core.version>
		<javax-mail.version>1.4</javax-mail.version>
		<jsbml.version>1.6.1</jsbml.version>
		<jung-api.version>2.1.1</jung-api.version>
		<jung-algorithms.version>2.1.1</jung-algorithms.version>
		<jung-graph-impl.version>2.1.1</jung-graph-impl.version>
		<jung-samples.version>2.1.1</jung-samples.version>
		<junit-jupiter.version>5.10.1</junit-jupiter.version>
		<log4j-slf4j2-impl.version>2.22.1</log4j-slf4j2-impl.version>
		<log4j-1.2-api.version>2.22.1</log4j-1.2-api.version>
		<log4j-api.version>2.22.1</log4j-api.version>
		<log4j-core.version>2.22.1</log4j-core.version>
		<log4j-jul.version>2.22.1</log4j-jul.version>
		<log4j2-jboss-logmanager.version>1.1.2.Final</log4j2-jboss-logmanager.version>
		<log4j-layout-template-json.version>2.22.1</log4j-layout-template-json.version>
		<lz4.version>1.8.0</lz4.version>
		<mongodb-driver-sync.version>5.0.0</mongodb-driver-sync.version>
		<n5.version>3.0.0</n5.version>
		<netcdf.version>4.3.22</netcdf.version>
		<nitrite.version>2.1.1</nitrite.version>
		<ojdbc-bom.version>23.3.0.23.09</ojdbc-bom.version>
		<ome-common.version>6.0.22</ome-common.version>
		<opencsv.version>5.7.1</opencsv.version>
		<picocli.version>4.6.3</picocli.version>
		<postgresql.version>42.6.0</postgresql.version>
		<restlet-version>2.4.3</restlet-version>
		<scifio-bf-compat.version>4.1.0</scifio-bf-compat.version>
		<sesame-model.version>2.9.0</sesame-model.version>
		<sesame-rio-api.version>2.9.0</sesame-rio-api.version>
		<sesame-rio-rdfxml.version>2.9.0</sesame-rio-rdfxml.version>
		<sesame-rio-n3.version>2.9.0</sesame-rio-n3.version>
		<slf4j-api.version>2.0.9</slf4j-api.version>
		<sshj.version>0.35.0</sshj.version>
		<thrift.version>0.18.0</thrift.version>
		<xercesImpl.version>2.8.1</xercesImpl.version>
		<xstream.version>1.4.20</xstream.version>
		<xalan.version>2.7.3</xalan.version>
		<xom.version>1.2.5</xom.version>

		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
		<!-- Note: for containerized HPC/singularity solvers - see Dockerfile-batch-dev  -->
		<!--       - vcell solvers from ghcr.io/virtualcell/vcell-solvers:v0.0.42-dev3   -->
		<!--       - langevin solver from 'solvers-langevin-linux.version'               -->
		<!--	   - for solvers-langevin-mac.version we use the amd64 (intel)  (13)     -->
		<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
		<solvers-vcell-mac.version>v0.0.44-dev4</solvers-vcell-mac.version>
		<solvers-vcell-windows.version>v0.0.40</solvers-vcell-windows.version>
		<solvers-vcell-linux.version>v0.0.44-dev4</solvers-vcell-linux.version>
		<solvers-langevin-mac.version>1.3.3</solvers-langevin-mac.version>
		<solvers-langevin-windows.version>1.3.3</solvers-langevin-windows.version>
		<solvers-langevin-linux.version>1.3.3</solvers-langevin-linux.version>
	</properties>


	<repositories>
		<!-- needed for com.mxgraph.jgraphx -->
		<repository>
			<id>com.alfresco.repository.public</id>
			<name>Alfresco Public Repository</name>
			<url>https://artifacts.alfresco.com/nexus/content/repositories/public/</url>
		</repository>

		<!-- needed for imagej dependencies -->
		<repository>
			<id>scijava.public</id>
			<url>https://maven.scijava.org/content/groups/public</url>
		</repository>

		<!-- needed for biomodels.net web services -->
		<repository>
			<id>ebi-repo</id>
			<name>The EBI internal repository</name>
			<url>https://www.ebi.ac.uk/~maven/m2repo</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit-jupiter.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<excludes>
						<exclude/>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.1.2</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>enforce</id>
						<configuration>
							<rules>
								<dependencyConvergence/>
							</rules>
						</configuration>
						<goals>
							<goal>enforce</goal>
						</goals>
					</execution>

					<execution>
						<id>enforce-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedPlugins>
<!--									&lt;!&ndash; will only display a warning but does not fail the build. &ndash;&gt;-->
<!--									<level>WARN</level>-->
<!--									<excludes>-->
<!--										<exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>-->
<!--									</excludes>-->
<!--									<message>Please consider using the maven-invoker-plugin (http://maven.apache.org/plugins/maven-invoker-plugin/)!</message>-->
								</bannedPlugins>
								<requireMavenVersion>
									<version>3.8</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>17</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin><!-- mvn dependency:copy-dependencies -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>analyze</id>
						<goals>
							<goal>analyze-only</goal>
						</goals>
						<configuration>
							<failOnWarning>true</failOnWarning>
						</configuration>
					</execution>
				</executions>

				<configuration>
					<outputDirectory>${project.build.directory}/maven-jars</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
